--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,10 @@ dependencies {
 // https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
 	implementation 'org.springframework.security:spring-security-config:6.2.2'
 
-
+	//Dependencias Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
 }
 
